hard-gists/1919511/run.log
=== Docker Run Log for 1919511 ===
Started at: Mi 29. Okt 12:34:11 CET 2025

[2025-10-29 12:34:11] START: Running container for 1919511
[2025-10-29 12:34:12] SUCCESS: Container ec82d221b0153e08a925488c89ed9030cf84243c5442d5bf7cbe250adf37bcc7 started for 1919511
=== Container logs for 1919511 ===
  File "/snippet.py", line 37
    print "Parsing Genbank file sequence file...."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1919511 ===
[2025-10-29 12:34:14] INFO: Container ec82d221b0153e08a925488c89ed9030cf84243c5442d5bf7cbe250adf37bcc7 has stopped
